# fpl-platform

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  PERSONAL_LEARNINGS.md  README.md  conftest.py  pyproject.toml
.claude/: settings.json
.claude/rules/: dbt.md  llm-enrichment.md  terraform.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  chore.md  feature.md
.github/workflows/: ci.yml  deploy.yml
docs/: data-dictionary.md  runbook.md  workflow.md
docs/adr/: 0001-monorepo-architecture.md  0002-s3-data-lake-design.md  0002-terraform-over-cdk.md  0003-direct-api-over-langchain.md  0004-llm-cost-optimisation.md  0004-tiered-llm-models-and-batching.md  0005-prompt-versioning-and-llm-observability.md  0005-prompt-versioning-by-directory.md  0006-parallel-pipeline-design.md  0006-s3-prefix-idempotency.md  0007-container-images-for-lambda.md  0007-static-dashboard-architecture.md  0008-neon-pgvector-for-agent-retrieval.md  0008-s3-data-lake-layer-design.md  0009-langfuse-for-llm-observability.md  0009-scout-report-agent-architecture.md  0010-agent-http-transport-lambda-function-url.md  0010-skip-capacity-lock-pattern.md  0011-parallel-enricher-lambdas.md  0011-parallel-step-functions-states.md  0011-ssm-parameter-store-over-secrets-manager.md  README.md
docs/architecture/: agent-architecture.md  data-lake-layers.md  fpl-pulse-flagship.drawio  frontend-backend-wiring.drawio  frontend-backend-wiring.md  llm-enrichment-flow.md  security-architecture.md  system-overview.md
docs/diagrams/: pipeline-flow.drawio
docs/evals/: baseline-v1.1-case3-rerun.json  baseline-v1.1.json  baseline.md
infrastructure/: tags.tf
infrastructure/bootstrap/: main.tf  outputs.tf  variables.tf
libs/: pyproject.toml
libs/fpl_lib/: __init__.py  _version.py  observability.py  secrets.py
libs/fpl_lib/clients/: __init__.py  neon.py  s3.py
libs/fpl_lib/core/: __init__.py  config.py  exception_collector.py  responses.py  run_handler.py
libs/fpl_lib/models/: __init__.py  fixture.py  player.py
libs/fpl_lib/utils/: __init__.py  date_utils.py
libs/fpl_lib/validators/: __init__.py  schemas.py
libs/tests/: __init__.py  conftest.py  test_config.py  test_exception_collector.py  test_neon_client.py  test_observability.py  test_s3_client.py  test_secrets.py
scripts/: backfill.py
services/agent/: Dockerfile  pyproject.toml
services/agent/docs/: agent-reference.md  langgraph-walkthrough.md
services/agent/scripts/: run_evals.py  snapshot_player_db.py
services/agent/src/fpl_agent/: __init__.py  api.py  squad_cache.py  squad_loader.py
services/agent/src/fpl_agent/embeddings/: __init__.py  embedder.py  schema.sql  sync_embeddings.py
services/agent/src/fpl_agent/evaluation/: __init__.py  eval_cases.py  evaluator.py  fixture_data.py  fixture_tools.py  judge.py  models.py
services/agent/src/fpl_agent/evaluation/prompts/: __init__.py
services/agent/src/fpl_agent/evaluation/prompts/v1/: __init__.py  judge.md
services/agent/src/fpl_agent/graph/: __init__.py  builder.py  config.py  nodes.py
services/agent/src/fpl_agent/graph/prompts/: __init__.py
services/agent/src/fpl_agent/graph/prompts/v1/: __init__.py  planner.md  recommender.md  reflector.md
services/agent/src/fpl_agent/handlers/: __init__.py  api_handler.py  sync_handler.py
services/agent/src/fpl_agent/middleware/: __init__.py  budget.py  cloudfront_secret.py  rate_limit.py
services/agent/src/fpl_agent/models/: __init__.py  requests.py  responses.py  state.py
services/agent/src/fpl_agent/tools/: __init__.py  player_tools.py
services/agent/tests/: __init__.py  conftest.py  test_api.py  test_budget.py  test_cloudfront_secret.py  test_embedder.py  test_evaluation.py  test_graph_builder.py  test_graph_nodes.py  test_rate_limit.py  test_squad_cache.py  test_squad_loader.py  test_sync_embeddings.py  test_tools.py
services/agent/tests/fixtures/: player_db_v1.parquet  player_db_v1.review.json
services/curate/: Dockerfile  pyproject.toml
services/curate/src/fpl_curate/: __init__.py  config.py
services/curate/src/fpl_curate/curators/: fixture_ticker.py  gameweek_briefing.py  models.py  player_dashboard.py  player_history.py  scoring.py  team_strength.py  transfer_picks.py
services/curate/src/fpl_curate/handlers/: curate_all.py
services/curate/tests/: conftest.py  test_curate_all_handler.py  test_fixture_ticker.py  test_gameweek_briefing.py  test_models.py  test_player_dashboard.py  test_player_history.py  test_scoring.py  test_team_strength.py  test_transfer_picks.py
services/data/: Dockerfile  pyproject.toml
services/data/src/fpl_data/: __init__.py
services/data/src/fpl_data/collectors/: __init__.py  exceptions.py  fpl_api_collector.py  gameweek_resolver.py  http.py  news_collector.py  team_fetcher.py  understat_collector.py
services/data/src/fpl_data/handlers/: __init__.py  fpl_api_handler.py  news_handler.py  resolve_gameweek.py  team_fetcher.py  transform.py  understat_handler.py  validator.py
services/data/src/fpl_data/scripts/: backfill.py
services/data/src/fpl_data/transformers/: __init__.py  player_transformer.py
services/data/src/fpl_data/validators/: __init__.py  engine.py  schemas.py
services/data/tests/: __init__.py  conftest.py  test_fpl_api_collector.py  test_news_collector.py  test_team_fetcher.py  test_transform.py  test_understat_collector.py  test_validator.py
services/enrich/: Dockerfile  pyproject.toml
services/enrich/src/fpl_enrich/: __init__.py  config.py
services/enrich/src/fpl_enrich/enrichers/: __init__.py  base.py  fixture_outlook.py  injury_signal.py  models.py  player_summary.py  sentiment.py
services/enrich/src/fpl_enrich/handlers/: __init__.py  enricher.py  merge_enrichments.py  single_enricher.py
services/enrich/src/fpl_enrich/prompts/v1/: fixture_outlook.txt  injury_signal.txt  player_summary.txt  sentiment.txt
services/enrich/src/fpl_enrich/utils/: __init__.py  prompt_loader.py
services/enrich/tests/: __init__.py  conftest.py  test_enricher_base.py  test_enrichers.py
services/stream/: init.sql  (+1 more)
(+124 files in other folders)
