[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fpl-platform"
dynamic = ["version"]
description = "FPL analytics platform — data engineering, LLM enrichment, agentic AI"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
    "pydantic>=2.0.0",
    "pyarrow>=14.0.0",
    "httpx>=0.27.0",
    "pandas>=2.0.0",
    "PyYAML>=6.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "boto3-stubs[s3,dynamodb,secretsmanager]",
    "parameterized>=0.8.1",
    "moto[s3,secretsmanager]>=5.0.0",
]

[tool.setuptools-scm]
version_file = "libs/fpl_lib/_version.py"
tag_regex = "^v(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+)$"

[tool.setuptools.packages.find]
where = ["libs"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["fpl_lib", "fpl_data", "fpl_enrich", "fpl_curate", "fpl_agent", "fpl_stream"]

[tool.pytest.ini_options]
testpaths = ["tests", "libs/tests", "services/data/tests", "services/enrich/tests", "services/curate/tests", "services/agent/tests"]
python_files = ["test_*.py"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--import-mode=importlib",
]
markers = [
    "slow: marks tests as slow",
    "integration: integration tests requiring AWS",
    "unit: unit tests",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
