[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fpl-lib"
version = "0.0.0"
description = "FPL Platform shared library"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyarrow>=14.0.0",
    "asyncpg>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "boto3-stubs[s3,dynamodb]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fpl_lib*"]
