[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fpl-agent"
version = "0.0.0"
description = "FPL transfer recommendation agent"
requires-python = ">=3.11"
dependencies = [
    "fpl-lib",
    "langgraph>=0.1.0",
    "anthropic>=0.25.0",
    "langfuse>=2.0.0",
    "fastapi>=0.110.0",
    "mangum>=0.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["src"]
