[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fpl-agent"
version = "0.0.0"
description = "FPL transfer recommendation agent"
requires-python = ">=3.11"
dependencies = [
    "fpl-lib",
    "langgraph>=0.1.0",
    "anthropic>=0.25.0",
    "langfuse>=3.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.0.0",
    "sentence-transformers>=2.0.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "httpx>=0.27.0",
    "moto[dynamodb]>=5.0.0",
    # Eval CLI deps — needed by scripts/run_evals.py and tests/test_evaluation.py.
    # pandas + pyarrow are pulled in transitively (sentence-transformers), but the
    # eval framework uses them directly; declaring them is honesty about deps.
    "rich>=13.0.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

# Prompts must ship in the wheel — otherwise the Lambda can't find them at
# runtime. Default setuptools wheels drop non-Python files.
[tool.setuptools.package-data]
fpl_agent = [
    "graph/prompts/v1/*.md",
    "evaluation/prompts/v1/*.md",
]
