[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fpl-enrich"
version = "0.0.0"
description = "FPL LLM enrichment service"
requires-python = ">=3.11"
dependencies = [
    "fpl-lib",
    "anthropic>=0.25.0",
    "langfuse>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fpl_enrich = ["prompts/**/*.txt"]
